--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <title>
         Imersão Dev - Aula 08
     </title>
+    <link href = 'https://github.com/netomachado/supertrunfoimersaodev/blob/main/style.css' rel= 'stylesheet' />
+    <script src= 'https://github.com/netomachado/supertrunfoimersaodev/blob/main/script.js' ></script>
+
 </head>
 
 <body>
